// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`password (isCI = false) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  _
└
",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = false) > clears input on error when clearOnError is true 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  _
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ▪_",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "▲  foo
│  ▪
└  Error
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◆  foo
│  ▪_
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ▪▪_",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  ▪▪",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = false) > renders and clears validation errors 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  _
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ▪_",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "▲  foo
│  ▪
└  Password must be at least 2 characters
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◆  foo
│  ▪▪_
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  ▪▪",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = false) > renders cancelled value 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  _
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ▪_",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "■  foo
│  ▪
│",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = false) > renders custom mask 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  _
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  *_",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  **_",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  **",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = false) > renders masked value 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  _
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ▪_",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ▪▪_",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  ▪▪",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = false) > renders message 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  _
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = true) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  _
└
",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = true) > clears input on error when clearOnError is true 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  _
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ▪_",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "▲  foo
│  ▪
└  Error
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◆  foo
│  ▪_
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ▪▪_",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  ▪▪",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = true) > renders and clears validation errors 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  _
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ▪_",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "▲  foo
│  ▪
└  Password must be at least 2 characters
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◆  foo
│  ▪▪_
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  ▪▪",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = true) > renders cancelled value 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  _
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ▪_",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "■  foo
│  ▪
│",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = true) > renders custom mask 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  _
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  *_",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  **_",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  **",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = true) > renders masked value 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  _
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ▪_",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ▪▪_",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  ▪▪",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = true) > renders message 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  _
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│",
  "
",
  "<cursor.show>",
]
`;
